# px-software

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  remote_test.sh  resources.qrc
SAMPLE_DB/: add_to_db.sh  category.rec
desktop/: px-software.desktop
px-gui-lib/: CMakeLists.txt  PXContentWidget.h  PXMainWindow.cpp  PXMainWindow.h  PXParamSettings.h  PXSearchBox.h  PXSeperator.h  PXSideBar.h  PXSideBarItem.h  PXStatusBar.h  PXTopBar.h  PXWidget.h  PXWindowManager.h
script/: px-software-update-check  px-software-update-check.scm
src/: AsyncTaskRunner.cpp  AsyncTaskRunner.h  RecDB.cpp  RecDB.h  main.cpp
src/GUI/: CacheManager.cpp  CacheManager.h  CategoryLayout.cpp  CategoryLayout.h  CategoryWidget.cpp  CategoryWidget.h  Common.h  ContentList.cpp  ContentList.h  FileDownloader.cpp  FileDownloader.h  InProgressPackageListView.cpp  InProgressPackageListView.h  InProgressPakcageListView.cpp  InProgressPakcageListView.h  InProgressWidgetItem.h  InstalledPackageListView.cpp  InstalledPackageListView.h  InstalledWidgetItem.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OtherApplicationsWidgetItem.cpp  OtherApplicationsWidgetItem.h  PackageComponent.h  PackageDetails.cpp  PackageDetails.h  PackageListWidget.h  PackageListWidgetItem.cpp  PackageListWidgetItem.h  PackageManagerTracker.cpp  PackageManagerTracker.h  PackageWidget.cpp  PackageWidget.h  PxIconPack.h  PxLineSeperator.h  PxQListWidget.h  PxQListWidgetItem.h  PxQPushButton.h  PxQScrollArea.h  (+17 more)
src/GUI/notification/: notifications_interface.cpp  notifications_interface.h  pxnotification.cpp  pxnotification.h  pxnotification_p.h
src/GUI/px-qobjects/: PxCircleLoadingAnimation.h  PxLineSeperator.h  PxQListWidgetItem.h  PxQPushButton.h  PxQScrollArea.h  PxQWidget.h  PxSearchBar.h  PxViewLoadingAnimation.h
src/GUI/translations/: px-software_de.ts  px-software_fa.ts  px-software_fr.ts
src/GUI/viewitems/: CategoriesWidgetItem.h  CategoryPackageListView.h  CategoryView.h  EmptyWidgetItem.h  InProgressItem.h  InProgressPackageListView.cpp  InProgressPackageListView.h  InProgressWidgetItem.h  InstalledPackageListView.cpp  InstalledPackageListView.h  InstalledWidgetItem.h  LatestWidgetItem.h  OtherApplicationsWidgetItem.cpp  OtherApplicationsWidgetItem.h  PackageListWidget.h  PackageListWidgetItem.cpp  PackageListWidgetItem.h  RecommendedWidgetItem.h  SearchPackagesList.h  SystemUpdatablePackageListView.cpp  SystemUpdatablePackageListView.h  SystemUpdatableWidgetItem.h  TagPackageList.h  UpdateAllPackagesItem.cpp  UpdateAllPackagesItem.h  UpdatesItem.h  UserUpdatablePackageListView.cpp  UserUpdatablePackageListView.h  UserUpdatableWidgetItem.h
src/PKG/: DataAccessLayer.cpp  DataAccessLayer.h  DataEntities.cpp  DataEntities.h  GuixParser.cpp  GuixParser.h  GuixWrapper.cpp  GuixWrapper.h  PackageManager.cpp  PackageManager.h
src/PKG/GUIX/: GuixCategoryPackagesTask.cpp  GuixCategoryPackagesTask.h  GuixInstalledPackagesTask.cpp  GuixInstalledPackagesTask.h  GuixPackageInfoThread.cpp  GuixPackageInfoThread.h  GuixPackageInstallTask.cpp  GuixPackageInstallTask.h  GuixPackageRemoveTask.cpp  GuixPackageRemoveTask.h  GuixPackageSearchTask.cpp  GuixPackageSearchTask.h  GuixPackageUpgradeTask.cpp  GuixPackageUpgradeTask.h  GuixProfileStatusTask.cpp  GuixProfileStatusTask.h  GuixProfileUpdateTask.cpp  GuixProfileUpdateTask.h  GuixProfileUpdateThread.cpp  GuixProfileUpdateThread.h  GuixTask.cpp  GuixTask.h  GuixUpgradablePackagesTask.cpp  GuixUpgradablePackagesTask.h  PxCheckUpdateTask.cpp  PxCheckUpdateTask.h  PxTask.cpp  PxTask.h  PxUpdateTask.cpp  PxUpdateTask.h
src/PKG/MISC/: LxqtSessionInterface.cpp  LxqtSessionInterface.h  Utils.cpp  Utils.h
src/common/: DownloadManager.cpp  DownloadManager.h  FileDownloader.cpp  FileDownloader.h
src/px-app-ui/: PXContentWidget.h  PXMainWindow.cpp  PXMainWindow.h  PXParamSettings.h  PXScrollArea.h  PXSearchBox.h  PXSideBar.h  PXSideBarItem.h  PXStatusBar.h  PXWidget.h  PXWindowManager.cpp  PXWindowManager.h
tests/: TestAsyncTaskRunner.cpp  TestDataAccessLayer.cpp  TestPackageManager.cpp  TestRecDB.cpp
